# voxelized_geometry_tools

./: .gitignore  CMakeLists.txt  CMakeLists.txt.ros1  CMakeLists.txt.ros2  LICENSE  README.md  package.xml.ros1  package.xml.ros2
cmake/: voxelized_geometry_tools-dependencies.cmake  voxelized_geometry_tools-extras.cmake
example/: estimate_distance.cpp  pointcloud_voxelization.cpp  spatial_segments.cpp  tutorial.cpp  voxel_raycasting.cpp
include/voxelized_geometry_tools/: cl.hpp  collision_map.hpp  cpu_pointcloud_voxelization.hpp  cuda_pointcloud_voxelization.hpp  cuda_voxelization_helpers.h  device_pointcloud_voxelization.hpp  device_voxelization_interface.hpp  dynamic_spatial_hashed_collision_map.hpp  dynamic_spatial_hashed_occupancy_map.hpp  mesh_rasterizer.hpp  occupancy_component_map.hpp  occupancy_map.hpp  occupancy_map_conversions.hpp  opencl_pointcloud_voxelization.hpp  opencl_voxelization_helpers.h  pointcloud_voxelization.hpp  pointcloud_voxelization_interface.hpp  pointcloud_voxelization_ros_interface.hpp  ros_interface.hpp  signed_distance_field.hpp  signed_distance_field_generation.hpp  tagged_object_collision_map.hpp  tagged_object_occupancy_component_map.hpp  tagged_object_occupancy_map.hpp  topology_computation.hpp  vgt_namespace.hpp
msg/: SignedDistanceFieldMessage.msg
opencl_cpp/: cl.hpp
src/voxelized_geometry_tools/: collision_map.cpp  cpu_pointcloud_voxelization.cpp  cuda_pointcloud_voxelization.cpp  cuda_voxelization_helpers.cu  device_pointcloud_voxelization.cpp  dummy_cuda_voxelization_helpers.cc  dummy_opencl_voxelization_helpers.cc  dynamic_spatial_hashed_collision_map.cpp  dynamic_spatial_hashed_occupancy_map.cpp  mesh_rasterizer.cpp  occupancy_component_map.cpp  occupancy_map.cpp  occupancy_map_conversions.cpp  opencl_pointcloud_voxelization.cpp  opencl_voxelization_helpers.cc  pointcloud_voxelization.cpp  pointcloud_voxelization_ros_interface.cpp  ros_interface.cpp  signed_distance_field.cpp  signed_distance_field_generation.cpp  tagged_object_collision_map.cpp  tagged_object_occupancy_component_map.cpp  tagged_object_occupancy_map.cpp
test/: mesh_rasterization_test.cpp  occupancy_map_conversions_test.cpp  pointcloud_voxelization_test.cpp  sdf_generation_test.cpp  voxel_raycasting_test.cpp
